feat: added auth API
