# config/routes.rb
@@ -5,6 +5,7 @@ Rails.application.routes.draw do
   namespace :api do
     namespace :v1 do
       get 'health', to: 'health#index'
+      post 'auth', to: 'auth#login_or_register'
     end
   end
 
